--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
